--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
     <div id="navigation" class="col-full">
 
         <ul id="main-nav" class="nav fl">
-            <li class="{% if page.title == 'Products' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
-            <li class="{% if page.title == 'About Products' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/about.html" title="About">About</a></li>
+            <li class="{% if page.title == 'Humans' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
+            <li class="{% if page.title == 'About Humans' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/about.html" title="About">About</a></li>
         </ul>
         
         <ul class="rss fr">
